pre walk commit, added some more html code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Google Home Page</title>
     </head>
     <body>
+        <!-- Actual webpage design-->
         <header>
             <div>About</div>
             <div>Store</div>
@@ -12,8 +13,11 @@
             <div>Apps</div>
             <div>Profile</div>
         </header>
-        <!-- Actual webpage design-->
-        <h1>Google</h1>
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+        <main>
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+            <input type="text">
+            <div>Google Search</div>
+            <div>I'm Feeling Lucky</div>
+        </main>
     </body>
 </html>
