--- a/index.html
+++ b/index.html
@@ -57,12 +57,39 @@
                 text-decoration: underline;
             }
             .button-custom{
-                background-color: rgb(248, 249, 250)
+                background-color: rgb(248, 249, 250);
+                color: rgb(60, 64, 67);
+                height: 36px;
+                margin: 11px 4px;
+                padding: 0px 16px;
+                border-radius: 4px;
+                border-color:rgb(248, 249, 250);
+                
             }
             .footer-bar{
                 background-color: rgb(242, 242, 242);
                 display: flex;
+                justify-content: center;
+                align-items: center;
                 flex-direction: row;
+            }
+            .footer-left{
+                background-color: royalblue;
+                display: flex;
+                justify-content: flex-start;
+                flex-grow: 1;
+            }
+            .footer-center{
+                background-color: salmon;
+                display: flex;
+                justify-content: center;
+                flex-grow: 1;
+            }
+            .footer-right{
+                background-color: slateblue;
+                display: flex;
+                justify-content: flex-end;
+                flex-grow: 1;
             }
         </Style>
         <div class="page-grid">
@@ -87,13 +114,19 @@
                 </div>
             </div>
             <div class="footer-bar">
-                <div id="ul-hov">Advertising</div>
-                <div id="ul-hov">Business</div>
-                <div id="ul-hov">How Search Works</div>
-                <div id="ul-hov">Carbon neutral since 2007</div>
-                <div id="ul-hov">Privacy</div>
-                <div id="ul-hov">Terms</div>
-                <div id="ul-hov">Settings</div>
+                <div class="footer-left">
+                    <div id="ul-hov">Advertising</div>
+                    <div id="ul-hov">Business</div>
+                    <div id="ul-hov">How Search Works</div>
+                </div>
+                <div class="footer-center">
+                    <div id="ul-hov">Carbon neutral since 2007</div>
+                </div>
+                <div class="footer-right">
+                    <div id="ul-hov">Privacy</div>
+                    <div id="ul-hov">Terms</div>
+                    <div id="ul-hov">Settings</div>
+                </div>
             </div>
         </div>
     </body>
