Last progress set for 1/19

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 border-radius: 50px;
             }
             .nav-bar{
-                background-color: aqua;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -29,7 +28,6 @@
                 padding: 6px;
             }
             .nav-bar-left{
-                background-color: grey;
                 display: flex;
                 justify-content: flex-start;
                 flex-grow: 1;
@@ -41,7 +39,6 @@
                 margin: 0px 5px;
             }
             .nav-bar-right{
-                background-color: red;
                 display: flex;
                 justify-content: flex-end;
                 flex-grow: 1;
@@ -68,25 +65,24 @@
             }
             .footer-bar{
                 background-color: rgb(242, 242, 242);
+                height: 47px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 flex-direction: row;
+                color:rgb(112, 117, 122)
             }
             .footer-left{
-                background-color: royalblue;
                 display: flex;
                 justify-content: flex-start;
                 flex-grow: 1;
             }
             .footer-center{
-                background-color: salmon;
                 display: flex;
                 justify-content: center;
                 flex-grow: 1;
             }
             .footer-right{
-                background-color: slateblue;
                 display: flex;
                 justify-content: flex-end;
                 flex-grow: 1;
