--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <body class="ariel-font">
         <!-- Actual webpage design-->
         <Style>
-            /*.page-grid{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }*/
             .ariel-font{
                 font-family: Arial, sans-serif;
                 font-size: 14px;
@@ -21,35 +16,16 @@
                 width: 487px;
                 border-radius: 50px;
             }
-            .nav-bar{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 60px;
+            .ul-nav{
+                position: fixed;
+                list-style-type: none;
+                top: 0px;
+                color:rgb(34, 34, 34);
+                margin: 0;
+                padding: 0;
+                width: 100%;
             }
-            .nav-bar-left{
-                display: flex;
-                justify-content: flex-start;
-                flex-grow: 1;
-                margin-left: 15px;
-            }
-            .nav-bar-left-text{
-                padding: 5px;
-                margin: 0px 5px;
-            }
-            .nav-bar-right{
-                display: flex;
-                justify-content: flex-end;
-                flex-grow: 1;
-                padding: 5px;
-                margin-right: 10px;
-            }
-            .nav-bar-right-text{
-                padding-left: 15px;
-                margin: 0px 5px;
-                font-size: 13px;
-            }
-            #ul-hov:hover{
+            li:hover{
                 text-decoration: underline;
             }
             .button-custom{
@@ -60,70 +36,101 @@
                 padding: 0px 16px;
                 border-radius: 4px;
                 border-color:rgb(248, 249, 250);
-                
             }
-            .footer-bar{
-                background-color: rgb(242, 242, 242);
-                height: 47px;
+            /* .ul-footer{
+                position: fixed;
+                list-style-type: none;
+                bottom: 0px;
                 display: flex;
-                justify-content: center;
+                justify-content: space-between;
+                background-color: rgb(242, 242, 242);
+                color:rgb(112, 117, 122);
+                margin: 0;
+                padding: 0px 20px;
+                height: 47px;
+                width: 100%;
+            } */
+            .footer{
+                position: fixed;
+                bottom: 0px;
+                display: flex;
+                justify-content: space-between;
                 align-items: center;
-                flex-direction: row;
-                color:rgb(112, 117, 122)
-                
+                background-color: rgb(242, 242, 242);
+                color:rgb(112, 117, 122);
+                margin: 0;
+                padding: 0px 20px;
+                height: 47px;
+                width: 100%;
             }
             .footer-left{
                 display: flex;
+                flex-direction: row;
                 justify-content: flex-start;
-                flex-grow: 1;
             }
             .footer-center{
                 display: flex;
-                justify-content: center;
-                flex-grow: 1;
+                justify-content: space-between;
             }
             .footer-right{
                 display: flex;
                 justify-content: flex-end;
-                flex-grow: 1;
             }
+            /* li{
+                float: left;
+                text-align: center;
+            }
+            li a{
+                display: block;
+                text-align: center;
+                color:rgb(112, 117, 122);
+                text-decoration: none;
+            }
+            .float-right{
+                float: right;
+            } */
         </Style>
-        <!-- <div class="page-grid"> -->
-            <div class="nav-bar">
-                <div class="nav-bar-left">
-                    <div id="ul-hov" class="nav-bar-left-text">About</div>
-                    <div id="ul-hov" class="nav-bar-left-text">Store</div>
-                </div>
-                <div class="nav-bar-right">
-                    <div id="ul-hov" class="nav-bar-right-text">Gmail</div>
-                    <div id="ul-hov" class="nav-bar-right-text">Images</div>
-                    <div>Apps</div>
-                    <div>Profile</div>
-                </div>
-            </div>
-            <div>
+        <ul class="ul-nav">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Store</a></li>
+            <li><a href="#">Gmail</a></li>
+            <li><a href="#">Images</a></li>
+            <li>Apps</li>
+            <li>Profile</li>
+        </ul>
+        <div id="center-screen">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"><br>
                 <input class="search-bar" type="text">
                 <div>
                     <button class="button-custom">Google Search</button>
                     <button class="button-custom">I'm Feeling Lucky</button>
                 </div>
+        </div>
+        <div class="footer">
+            <div class="footer-left">
+                <a href="#">Advertising</a>
+                <a href="#">Business</a>
+                <a href="#">How Search Works</a>
             </div>
-            <div class="footer-bar">
-                <div class="footer-left">
-                    <div id="ul-hov">Advertising</div>
-                    <div id="ul-hov">Business</div>
-                    <div id="ul-hov">How Search Works</div>
-                </div>
-                <div class="footer-center">
-                    <div id="ul-hov">Carbon neutral since 2007</div>
-                </div>
-                <div class="footer-right">
-                    <div id="ul-hov">Privacy</div>
-                    <div id="ul-hov">Terms</div>
-                    <div id="ul-hov">Settings</div>
-                </div>
+            <div class="footer-center">
+                <a href="https://sustainability.google/commitments/?utm_source=googlehpfooter&utm_medium=housepromos&utm_campaign=bottom-footer&utm_content=">Carbon neutral since 2007</a>
             </div>
-        <!-- </div> -->
+            <div class="footer-right">
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Settings</a>
+            </div>
+        </div>
+        <!-- <ul class="ul-footer">
+            <div>
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">How Search Works</a></li>
+                <li><a href="https://sustainability.google/commitments/?utm_source=googlehpfooter&utm_medium=housepromos&utm_campaign=bottom-footer&utm_content=">Carbon neutral since 2007</a></li>
+                <li class="float-right"><a href="#">Privacy</a></li>
+                <li class="float-right"><a href="#">Terms</a></li>
+                <li class="float-right"><a href="#">Settings</a></li>
+            </div>
+        </ul> -->
     </body>
 </html>
