Progress save for 1/25. Finished footer bar, started work refining the navigation bar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 display: flex;
                 justify-content: flex-end;
             }
+            .nav-text-right{
+                padding-left: 15px;
+            }
             .search-bar{
                 height: 34px;
                 width: 487px;
@@ -101,9 +104,9 @@
                 <a class="nav-text-left" href="#">Store</a>
             </div>
             <div class="nav-right">
-                <a href="#">Gmail</a>
-                <a href="#">Images</a>
-                <a>Apps</a>
+                <a class="nav-text-right" ref="#">Gmail</a>
+                <a class="nav-text-right" href="#">Images</a>
+                <a href="#"><img src="https://cdn2.iconfinder.com/data/icons/mobile-web-app-vol-4-1/32/Dots_Menu_list_option_preference_nav_navigation-512.png" alt="Google Apps" width="20px" height="20px"></a>
                 <a>Profile</a>
             </div>
         </div>
