--- a/index.html
+++ b/index.html
@@ -54,10 +54,28 @@
             .round{
                 border-radius: 50%;
             }
+            .image-area{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                min-height: 92px;
+                max-height: 290px;
+                height:calc(100% - 560px);
+                margin-top: 198px;
+            }
+            .mag-glass{
+                position: absolute;
+                top: 492px;
+                margin-left: 0px;
+                color: #9aa0a6;
+                height: 20px;
+                fill: currentColor;
+            }
             .search-bar{
-                height: 34px;
-                width: 487px;
-                border-radius: 50px;
+                height: 44px;
+                width: 586px;
+                border-radius: 24px;
+                border: 1px solid rgb(223, 225, 229);
             }
             a:hover{
                 text-decoration: underline;
@@ -124,9 +142,12 @@
                 <a class="nav-account" href="#"><img class="round" src="https://lh3.googleusercontent.com/ogw/ADGmqu-6mKMUlBQaBiGA2YvlB9fOjD85j1eB8kxVCt72=s32-c-mo" alt="Profile"></a>
             </div>
         </div>
-        <div id="center-screen">
+        <div class="image-area">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"><br>
-                <input class="search-bar" type="text">
+            <div style="padding:20px"><input class="search-bar" type="text"></div>
+                <svg class="mag-glass" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                </svg>
                 <div>
                     <button class="button-custom">Google Search</button>
                     <button class="button-custom">I'm Feeling Lucky</button>
