Finished google home page

--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
                 text-decoration: none;
             }
             .button-custom{
-                background-color: rgb(248, 249, 250);
-                color: rgb(60, 64, 67);
+                background-color: #f8f9fa;
+                border: 1px solid #f8f9fa;
+                color: #3c4043;
                 height: 36px;
                 margin: 11px 4px;
                 padding: 0px 16px;
+                line-height: 27px;
                 border-radius: 4px;
                 border-color:rgb(248, 249, 250);
             }
