--- a/index.html
+++ b/index.html
@@ -63,26 +63,34 @@
                 height:calc(100% - 560px);
                 margin-top: 198px;
             }
+            .search-bar-container{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 44px;
+                width: 586px;
+                border-radius: 24px;
+                border: 1px solid rgb(223, 225, 229);
+            }
             .mag-glass{
-                position: absolute;
-                top: 413px;
-                left: 680px;
-                margin-left: 0px;
+                display: flex;
+                justify-content: flex-start;
+                padding-left: 13px;
                 color: #9aa0a6;
                 height: 20px;
                 fill: currentColor;
             }
             .mic{
-                position: absolute;
-                top: 410px;
-                right: 680px;
+                display: flex;
+                justify-content: flex-end;
                 height: 24px;
+                margin-right: 13px;
             }
             .search-bar{
-                height: 44px;
+                height: 40px;
                 width: 586px;
                 border-radius: 24px;
-                border: 1px solid rgb(223, 225, 229);
+                border: 0px solid rgb(223, 225, 229);
             }
             a:hover{
                 text-decoration: underline;
@@ -96,7 +104,7 @@
                 border: 1px solid #f8f9fa;
                 color: #3c4043;
                 height: 36px;
-                margin: 11px 4px;
+                margin: 31px 4px;
                 padding: 0px 16px;
                 line-height: 27px;
                 border-radius: 4px;
@@ -153,15 +161,17 @@
         </div>
         <div class="image-area">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"><br>
-            <div style="padding:20px"><input class="search-bar" type="text"></div>
+            <div class="search-bar-container">
                 <svg class="mag-glass" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
+                <input class="search-bar" type="text">
                 <svg class="mic" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z" fill="#4285f4"></path>
                     <path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path><path d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z" fill="#f4b400"></path>
                     <path d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z" fill="#ea4335"></path>
                 </svg>
+            </div>
                 <div>
                     <button class="button-custom">Google Search</button>
                     <button class="button-custom">I'm Feeling Lucky</button>
